# cpp

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
cli/: gfs.cpp
gfs/: revergepackage.cpp
include/ThemModdingHerds/GFS/: Data.hpp  RevergePackage.hpp
include/ThemModdingHerds/IO/: Endianness.hpp  Reader.hpp  Writer.hpp
include/ThemModdingHerds/TFHRES/: Data.hpp  Database.hpp
include/ThemModdingHerds/Types/: Data.hpp  Math.hpp
io/: reader.cpp  writer.cpp
tests/: reader.cpp  test.cpp
tfhres/: database.cpp
